--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,16 +2,16 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
- "scripts": {
-  "dev": "next dev --webpack",
-  "build": "next build --webpack",
-  "start": "next start",
-  "lint": "next lint"
-},
+  "scripts": {
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@supabase/supabase-js": "^2.87.1",
     "axios": "^1.13.2",
-    "next": "16.0.6",
+    "next": "^16.0.10",
     "next-pwa": "^5.6.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
