--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,8 @@
     "axios": "^1.13.2",
     "next": "^16.0.10",
     "next-pwa": "^5.6.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
